update lab4 of kate alehina